tests/snapshots/desugar_file__switch_with_use.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/switch_with_use.bend
---
main: Any
(main) = λa λb λc λ* λ* (switch c { 0: λd d; _: λe λf (e f); } (a b))
