tests/snapshots/desugar_file__use_id.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/use_id.hvm
---
(Main) = (λa a 2 3 (λb b 2 3) (λc c 2 3 (λd d 2 3)))
