tests/snapshots/desugar_file__use_shadow.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/use_shadow.bend
---
main: Any
(main) = λa let {b c} = a; λd (b c d)
