tests/snapshots/desugar_file__use_shadow.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/use_shadow.hvm
---
(main) = λa let {a a_2} = a; λb (a a_2 b)
