tests/snapshots/desugar_file__use_switch.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/use_switch.hvm
---
(main) = λa λb λc (switch a { 0: λd d; _: λe λf (e f) } (b c))
