tests/snapshots/desugar_file__used_once_names.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/desugar_file/used_once_names.hvm
---
(foo) = λa λb λc let {c c_2} = c; (a b (c c_2))

(main) = (foo 2 3 λa a)
